Security_Grp.tf
//Security Group Creation for Wordpress
resource "aws_security_group" "allow_wp" {
  name        = "allow_wp"
  description = "It allow ssh,http"
  vpc_id      = aws_vpc.MyVPC.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_wp"
  }
}
//Security Group Creation for MySQL
resource "aws_security_group" "allow_sql" {
  name        = "allow_sql"
  description = "It allow MySQL only From WordPress "
  vpc_id      = aws_vpc.MyVPC.id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.allow_wp.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_sql"
  }
}
